# WEB_Python17M13

./: .coverage  docker-compose.yml  main.py  pyproject.toml  user's roles and access.txt
docs/source/: conf.py  index.rst
migrations/versions/: 1cf4dccefb16_init.py  4b31e7f0da24_verify_user.py  5596889eb51c_init.py  69e60577b112_add_table_users.py  6b5c10d860ff_init.py  8742eada824a_init.py  bd41ca5a4681_init.py  cb296a3b39ac_add_table_users_0.py  d18897c94325_init.py  e72e36d07fa3_init.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16388  16391  16393  16405  16409  16410  16411  16412  16413  16414  16420  16422  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  (+4 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
src/services/templates/: reset_password.html  verify_email.html
tests/: test_unit_repository_contacts.py
